--- a/.gitignore
+++ b/.gitignore
@@ -4558,3 +4558,4 @@ venv/lib/python3.8/site-packages/six.py
 classificador/__pycache__/genderclassifier.cpython-38.pyc
 classificador/__pycache__/predict.cpython-38.pyc
 classificador/__pycache__/training.cpython-38.pyc
+plot/__pycache__/graphs.cpython-38.pyc
